k8s/workloads/qbittorrent/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        platform.io/type: main
      hostname: qbittorrent
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
            privileged: true
          ports:
            - containerPort: 8080
              name: qbittorrent
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.2.4-libtorrentv1
          command: ["sh", "-c", "sleep 10 && /init"]
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /data/media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: qbittorrent
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.remini.site`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
